--- a/food_recipes_catagories.html
+++ b/food_recipes_catagories.html
@@ -55,7 +55,7 @@
 	<div class="whole-container">
 
 	<div class="a">
-		<a href="D:\PBL\For ICT project/Creamed Spinach and Parsnips.html">
+		<a href="Creamed Spinach and Parsnips.html">
 			<div class="card">
 		  		<img src="creamed spinach.jpg" alt="picture">
 		  		<div class="container">
@@ -66,7 +66,7 @@
 		</a>
 	</div>
 
-		<a href="D:\PBL\For ICT project/Warm Spaghetti-Squash Salad.html">
+		<a href="Warm Spaghetti-Squash Salad.html">
 			<div class="card">
 		  	<img src="warm_spaggheti.jpg" alt="picture">
 		  		<div class="container">
@@ -85,7 +85,7 @@
 	<div class="whole-container">
 
 	<div class="a">
-		<a href="D:\PBL\For ICT project/Chocolate Cupcakes.html">
+		<a href="Chocolate Cupcakes.html">
 			<div class="card">
 		  	<img src="chco_cupcake.jpg">
 		  		<div class="container">
@@ -96,7 +96,7 @@
 		</a>
 	</div>
 
-		<a href="D:\PBL\For ICT project/Chocolate Ice-cream.html">
+		<a href="Chocolate Ice-cream.html">
 			<div class="card">
 		  	<img src="choco_icecream.jpg">
 		  		<div class="container">
@@ -120,7 +120,7 @@
 	<div class="whole-container">
 
 	<div class="a">
-		<a href="D:\PBL\For ICT project/Fish and Corn Chowder.html">
+		<a href="Fish and Corn Chowder.html">
 			<div class="card">
 		  		<img src="fish_and_corn_choder.jpg">
 		  		<div class="container">
@@ -131,7 +131,7 @@
 		</a>
 	</div>
 
-		<a href="D:\PBL\For ICT project/Shrimp Po'boy.html">
+		<a href="Shrimp Po'boy.html">
 			<div class="card">
 				<img src="shrimp po'boy.jpg">
 		  		<div class="container">
@@ -150,7 +150,7 @@
 	<div class="whole-container">
 
 	<div class="a">
-		<a href="D:\PBL\For ICT project/Pot chicken.html">
+		<a href="Pot chicken.html">
 			<div class="card">
 		  		<img src="instant pot chicken Marinara with polenta.jpg">
 		  		<div class="container">
@@ -161,7 +161,7 @@
 		</a>
 	</div>
 
-		<a href="D:\PBL\For ICT project/French Bread Pizza.html"><div class="card">
+		<a href="French Bread Pizza.html"><div class="card">
 		  <img src="French_bread.jpg">
 		  <div class="container">
 		    <h4><b>French Bread Pizza</b></h4> 
