--- a/second_food_receipes.html
+++ b/second_food_receipes.html
@@ -52,7 +52,7 @@
 
 	<div class="whole-container">
 
-		<a href="D:\PBL\For ICT project/Nangyithoke.html">
+		<a href="Nangyithoke.html">
 			<div class="card">
 		  		<img src="nangyi.jpg" alt="picture">
 		  		<div class="container">
@@ -62,7 +62,7 @@
 			</div>
 		</a>
 
-	<a href="D:\PBL\For ICT project/coconut_milk_noodles.html">
+	<a href="coconut_milk_noodles.html">
 			<div class="card">
 		  	<img src="coconut.jpg" alt="picture">
 		  		<div class="container">
@@ -72,7 +72,7 @@
 			</div>
 		</a>
 
-		<a href="D:\PBL\For ICT project/Shan noodles.html">
+		<a href="Shan noodles.html">
 			<div class="card" id=cc>
 		  	<img src="shan_noodles.jpg" alt="picture">
 		  		<div class="container">
@@ -89,7 +89,7 @@
 
 	<div class="whole-container">
 
-		<a href="D:\PBL\For ICT project/Tom Yum Goong.html">
+		<a href="Tom Yum Goong.html">
 			<div class="card">
 		  	<img src="tom_yum.jpg">
 		  		<div class="container">
@@ -99,7 +99,7 @@
 			</div>
 		</a>
 
-		<a href="D:\PBL\For ICT project/Som Tum.html">
+		<a href="Som Tum.html">
 			<div class="card">
 		  	<img src="som_tum.jpg">
 		  		<div class="container">
@@ -110,7 +110,7 @@
 		</a>
 
 
-		<a href="D:\PBL\For ICT project/Pad Thai.html">
+		<a href="Pad Thai.html">
 			<div class="card" id=cc>
 		  	<img src="pad_thai.jpg">
 		  		<div class="container">
@@ -126,7 +126,7 @@
 
 	<div class="whole-container">
 
-		<a href="D:\PBL\For ICT project/Crepes.html">
+		<a href="Crepes.html">
 			<div class="card">
 		  	<img src="crepes.jpg">
 		  		<div class="container">
@@ -136,7 +136,7 @@
 			</div>
 		</a>
 
-		<a href="D:\PBL\For ICT project/soup à l'oignon.html">
+		<a href="soup à l'oignon.html">
 			<div class="card">
 		  	<img src="soup_la.jpg">
 		  		<div class="container">
@@ -146,7 +146,7 @@
 			</div>
 		</a>
 
-		<a href="D:\PBL\For ICT project/bouillabaisse.html">
+		<a href="bouillabaisse.html">
 			<div class="card" id=cc>
 		  	<img src="Bouillabaisse.jpg">
 		  		<div class="container">
@@ -162,7 +162,7 @@
 
 	<div class="whole-container">
 
-		<a href="D:\PBL\For ICT project/Pozole Rojo.html">
+		<a href="Pozole Rojo.html">
 			<div class="card">
 		  	<img src="pozole_rojo.jpg">
 		  		<div class="container">
@@ -172,7 +172,7 @@
 			</div>
 		</a>
 
-		<a href="D:\PBL\For ICT project/Chilaquiles.html">
+		<a href="Chilaquiles.html">
 			<div class="card">
 		  	<img src="Chilaquiles.jpg">
 		  		<div class="container">
@@ -182,7 +182,7 @@
 			</div>
 		</a>
 
-		<a href="D:\PBL\For ICT project/Elote.html">
+		<a href="Elote.html">
 			<div class="card"  id=cc>
 		  	<img src="Elote.jpg">
 		  		<div class="container">
@@ -200,7 +200,7 @@
 
 	<div class="whole-container">
 
-		<a href="D:\PBL\For ICT project/Chocolate Chip Cookies.html">
+		<a href="Chocolate Chip Cookies.html">
 			<div class="card">
 		 	<img src="cookies.jpg">
 		  		<div class="container">
@@ -210,7 +210,7 @@
 			</div>
 		</a>
 
-		<a href="D:\PBL\For ICT project/Bagel Lox.html">
+		<a href="Bagel Lox.html">
 			<div class="card">
 		  	<img src="begal.jpg">
 		  		<div class="container">
@@ -220,7 +220,7 @@
 			</div>
 		</a>
 
-		<a href="D:\PBL\For ICT project/Apple Pie.html">
+		<a href="Apple Pie.html">
 			<div class="card"  id=cc>
 		  	<img src="apple_pie.jpg">
 		  		<div class="container">
