--- a/Pozole Rojo.html
+++ b/Pozole Rojo.html
@@ -549,7 +549,7 @@
 
 		<ul>
 		<h3 style="font-size: 30px; font-weight: bolder;">Quick links</h3>
-		<li><h3><a href="Home.html">Home</a></h3></li>
+		<li><h3><a href="home.html">Home</a></h3></li>
 		<li><h3><a href="second_food_receipes.html">Recipes by countries</a></h3></li>
 		<li><h3><a href="food_recipes_catagories.html">Recipes by catagories</a></h3></li>
 		<li><h3><a href="About.html">About</a></h3></li>
