Update Creamed Spinach and Parsnips.html

--- a/Creamed Spinach and Parsnips.html
+++ b/Creamed Spinach and Parsnips.html
@@ -484,7 +484,7 @@
 <div>
 		<h1>Other featured recipes</h1>
 
-		<div class="a"><a href="Chicken piccata pasta.html"><div class="card">
+		<div class="a"><a href="chicken piccata pasta.html"><div class="card">
 		  <img src="chi.jpg" alt="picture" style="height: 179.5px;">
 		  <div class="container">
 		    <h4><b>Chicken pasta</b></h4> 
@@ -492,7 +492,7 @@
 		  </div>
 		</div></a></div>
 
-		<div class="b"><a href="Spring rolls with peanut sauce"><div class="card">
+		<div class="b"><a href="Spring rolls with peanut sauce.html"><div class="card">
 		  <img src="roll.jpg" style="height: 179.5px;">
 		  <div class="container">
 		    <h4><b>Spicy Shrimp Soup</b></h4> 
