--- a/Shrimp Po'boy.html
+++ b/Shrimp Po'boy.html
@@ -492,7 +492,7 @@
 <div>
 		<h1>Other featured recipes</h1>
 
-		<div class="a"><a href="Chicken piccata pasta.html"><div class="card">
+		<div class="a"><a href="chicken piccata pasta.html"><div class="card">
 		  <img src="picc.jpg" alt="picture" style="height: 179.5px;">
 		  <div class="container">
 		    <h4><b>Chicken Pasta</b></h4> 
