--- a/Pot chicken.html
+++ b/Pot chicken.html
@@ -466,7 +466,7 @@
 <div>
 		<h1>Other featured recipes</h1>
 
-		<div class="a"><a href="Spring rolls.html"><div class="card">
+		<div class="a"><a href="spring rolls with peanut sauce.html"><div class="card">
 		  <img src="roll.jpg" alt="picture" style="height: 179.5px;">
 		  <div class="container">
 		    <h4><b>Spring Rolls</b></h4> 
