--- a/Chocolate Ice-cream.html
+++ b/Chocolate Ice-cream.html
@@ -495,7 +495,7 @@
 		  </div>
 		</div></a></div>
 
-		<div class="b"><a href="Chicken piccata pasta.html"><div class="card">
+		<div class="b"><a href="chicken piccata pasta.html"><div class="card">
 		  <img src="picc.jpg" style="height: 179.5px;">
 		  <div class="container">
 		    <h4><b>Chicken Pasta</b></h4> 
