--- a/bouillabaisse.html
+++ b/bouillabaisse.html
@@ -487,7 +487,7 @@
 		<h1>Other featured recipes</h1>
 
 		<div class="a"><a href="Shan noodles.html"><div class="card">
-		  <img src="shan noodles.jpg" alt="picture" style="height: 179.5px;">
+		  <img src="Shan noodles.jpg" alt="picture" style="height: 179.5px;">
 		  <div class="container">
 		    <h4><b>Shan noodles</b></h4> 
 		    <p>Click for more...</p> 
