Update Chocolate Chip Cookies.html

--- a/Chocolate Chip Cookies.html
+++ b/Chocolate Chip Cookies.html
@@ -514,7 +514,7 @@
 
 
 		<div class="c"><a href="Crepes.html"><div class="card">
-		  <img src="Crepes.jpg" alt="picture" style="height: 179.5px;">
+		  <img src="crepes.jpg" alt="picture" style="height: 179.5px;">
 		  <div class="container">
 		    <h4><b>Crepes</b></h4> 
 		    <p>Click for more...</p> 
