--- a/Chocolate Cupcakes.html
+++ b/Chocolate Cupcakes.html
@@ -43,14 +43,6 @@
 				margin-right: auto;
 				margin-left: 30px;
 			}
-			.the_phone{
-				margin-left: 100px;
-				
-			}
-			.the_email{
-				margin-left: 130px;
-				margin-top: 60px;
-			}
 			.youtube{
 				display: none;
 			}
@@ -512,7 +504,7 @@
 		  </div>
 		</div></a></div>
 
-		<div class="b"><a href="Warm Spaghetti-Squash Salad.html"><div class="card">
+		<div class="b"><a href="Spaghetti-Squash Salad.html"><div class="card">
 		  <img src="warm.jpg" style="height: 179.5px;">
 		  <div class="container">
 		    <h4><b>Spaghetti-Squash Salad</b></h4> 
