--- a/Chocolate Cupcakes.html
+++ b/Chocolate Cupcakes.html
@@ -507,7 +507,7 @@
 		<div class="b"><a href="Spaghetti-Squash Salad.html"><div class="card">
 		  <img src="warm.jpg" style="height: 179.5px;">
 		  <div class="container">
-		    <h4><b>Spaghetti-Squash Salad</b></h4> 
+		    <h4><b>Spaghetti-Squash</b></h4> 
 		    <p>Click for more...</p> 
 		  </div>
 		</div></a></div>
