--- a/Chocolate Cupcakes.html
+++ b/Chocolate Cupcakes.html
@@ -504,7 +504,7 @@
 		  </div>
 		</div></a></div>
 
-		<div class="b"><a href="Spaghetti-Squash Salad.html"><div class="card">
+		<div class="b"><a href="Warm Spaghetti-Squash Salad.html"><div class="card">
 		  <img src="warm.jpg" style="height: 179.5px;">
 		  <div class="container">
 		    <h4><b>Spaghetti-Squash</b></h4> 
